--- a/sass/modules/_landing.scss
+++ b/sass/modules/_landing.scss
@@ -7,9 +7,9 @@
 }
 
 .call-to-action {
-  @include pad(5,0);
+  @include prefix(5);
   @include padding-leader(1);
-  @include trailer(3);
+  @include trailer(2);
   @include background(image-url('wordmark.svg') no-repeat scroll bottom);
   @include background-size(contain);
   padding-bottom: 10%;
@@ -59,23 +59,7 @@
 }
 
 .desc {
-  @include pie-clearfix;
-  @include rhythm-borders(1px,1);
-  @include bleed(rhythm(2));
-  @include box-shadow(inset 0 0 3px $base);
-  background: color(lighter $base,.25);
-
-  h2 {
-    @include serif;
-    @include adjust-font-size-to($medpx);
-    @include trailer(.5);
-    font-weight: bold;
-  }
-
-  ol {
-    padding-left: rhythm(1);
-    list-style: decimal;
-  }
+  @include pre(5);
 
   p { @include trailer; }
 }
