--- a/templates/landing/_form.html
+++ b/templates/landing/_form.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 <form class="signup" method="POST">
   {% csrf_token %}
-  <label for="id_email">Sign up for updates when we launch</label>
+  <label for="id_email">Get updates when we launch:</label>
   {{ form.email|attr:"placeholder:email@example.com" }}
   <button type="submit">Sign up</button>
 <form>
