--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,10 @@
     {% include "landing/_form.html" %}
   </div>
 
+  <p class="landing-tagline">
+    Exploring what's possible in the world of teaching and learning.
+  </p>
+
   <div class="desc">
     <p>
       Great teachers do more than "teach to the test."
