--- a/templates/demo.html
+++ b/templates/demo.html
@@ -22,7 +22,7 @@
 
   <header>
     <h1 class="logo">The K Network</h1>
-    <p class="tagline">exploring what's possible in the world of teaching and learning</p>
+    <p class="tagline">Exploring what's possible in the world of teaching and learning</p>
     <p class="intro">The following 7 steps, plus some imagination, should give you a sense of the value to education The K Network can provide.</p>
   </header>
 
