--- a/templates/home.html
+++ b/templates/home.html
@@ -4,38 +4,51 @@
 <div class="landing" role="main">
   <header>
     <h1 class="title">The K Network.</h1>
-    <p class="tagline">exploring what's possible in the world of teaching and learning</p>
+    <p class="tagline">Exploring what's possible in the world of teaching and learning</p>
   </header>
 
   <div class="call-to-action">
     <p class="intro">
-      Stories from your students,
-      collected over time,
-      to inspire you and the people around you.
+      You change lives.<br />
+      Let us record your impact,
+      and keep you&nbsp;inspired.
     </p>
 
     {% include "messages_ui/_messages.html" %}
     {% include "landing/_form.html" %}
   </div>
 
-  <p class="landing-tagline">
-    Exploring what's possible in the world of teaching and learning.
-  </p>
-
   <div class="desc">
-    <p>
-      Great teachers do more than "teach to the test."
-      You've had an impact on every student
-      who has walked through your classroom&nbsp;door.
-    </p>
-    <p>
-      Let students and parents share those stories with&nbsp;you.
-    </p>
-    <p>
-      We'll collect them on your public KNetwork profile.
-      Use it to build your career,
-      or remind yourself why you began&nbsp;teaching.
-    </p>
+
+    <div class="feature">
+      <h2>You change lives.</h2>
+      <p>
+        As a teacher,
+        you impact every student who walks through your door.
+        You're a mentor and supporter,
+        building insight, enthusiasm, and confidence.
+      </p>
+    </div>
+
+    <div class="feature">
+      <h2>We record your impact.</h2>
+      <p>
+        Give students and parents a place to share with you –
+        and the world –
+        the differences you’ve made.
+        Create a résumé of lives changed.
+      </p>
+    </div>
+
+    <div class="feature">
+      <h2>You stay inspired.</h2>
+      <p>
+        Rediscover inspiration in your own stories –
+        remind yourself what you’re capable of doing,
+        and why you became a teacher.
+      </p>
+    </div>
+
   </div>
 </div>
 {% endblock %}
