--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,16 +1,4 @@
 // Screen
 // ======
 
-@import "base";
-@import "general";
-
-// Layout
-// ------
-
-@import "layout/base";
-
-// Modules
-// -------
-
-@import "modules/landing";
-@import "modules/demo";
+@import "site";
