--- a/sass/general/_root.scss
+++ b/sass/general/_root.scss
@@ -1,11 +1,5 @@
-// ----------------------------------------------------------------------------
-// Imports
-
-@import "compass/reset";
-@import "fonts";
-
-// ----------------------------------------------------------------------------
 // Root
+// ====
 
 @include establish-baseline;
 @include border-box-sizing;
@@ -21,14 +15,4 @@ html, body {
   width: 100%;
 }
 
-body {
-  overflow-x: hidden;
-}
-
-// ----------------------------------------------------------------------------
-// More
-
-@import "type";
-@import "icons";
-@import "icomoon";
-@import "forms";
+body { overflow-x: hidden; }
