--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -1,42 +1,56 @@
 // Landing
 // =======
 
+@import "site";
+
+$landing-break: 40em;
+
 .landing {
-  @include padding-leader(2);
   max-width: 60em;
-  header { @include gone; }
-}
 
-.call-to-action {
-  @include trailer(1);
-  @include background(image-url('wordmark.svg') no-repeat scroll top);
-  @include background-size(contain);
-  padding-top: 45%;
-
-  @include breakpoint(40em) {
-    @include prefix(5);
-    @include padding-leader(1);
-    @include trailer(2);
-    background-position: bottom;
-    padding-bottom: 10%;
+  @include breakpoint($landing-break) {
+    header { @include gone; }
   }
 }
 
+// Call to Action
+// --------------
+
+.call-to-action {
+  @include trailer;
+
+  @include after(attr(data-tagline)) {
+    @extend %logo;
+    @extend %tagline;
+    margin-top: -26%;
+    display: none;
+    @include breakpoint($landing-break) { display: block; }
+  }
+
+  @include breakpoint($landing-break) { @include trailer(3); }
+}
+
+%intro-section {
+  @include trailer(1);
+  @include breakpoint($landing-break) { @include pre(5); }
+}
+
 .intro {
+  @extend %intro-section;
   @include serif;
   @include adjust-font-size-to($medpx);
   @include trailer;
   color: $red;
 
-  @include breakpoint(40em) {
+  @include breakpoint($landing-break) {
     @include adjust-font-size-to($largepx);
     @include trailer(2);
   }
 }
 
 .signup {
+  @extend %intro-section;
   @include pie-clearfix;
-  @include trailer(1);
   label {
     @include adjust-font-size-to($smallpx);
     display: block;
@@ -54,8 +68,7 @@
     border-color: color(darker $green);
     font-weight: bold;
   }
-  @include breakpoint(40em) {
-    @include trailer(2);
+  @include breakpoint($landing-break) {
     button {
       @include adjust-font-size-to($normpx);
       margin-top: -1px;
@@ -64,7 +77,7 @@
 }
 
 .message {
-  @include trailer;
+  @extend %intro-section;
   @include rhythm-borders(1px,.5);
   position: relative;
   color: color(lightest);
@@ -90,6 +103,7 @@
   @include clearfix;
   @include h-borders(2px,1);
   @include bleed(rhythm(1));
+  @include trailer;
   border-style: dashed;
   border-color: color(dark $blue,.25);
 
@@ -102,13 +116,13 @@
     @include trailer;
   }
 
-  @include breakpoint(40em) {
+  @include breakpoint($landing-break) {
     @include h-borders(2px,2);
     border-style: dashed;
   }
 }
 
-@include breakpoint(40em) {
+@include breakpoint($landing-break) {
   .feature {
     @include span-columns(3,9);
     @include nth-omega(3n);
@@ -116,3 +130,4 @@
     p { margin: 0; }
   }
 }
+
